[package]
name = "battle_card_game"
version = "0.1.0"
authors = ["Paul-Emmanuel Vandenburie <pevandenburie@yahoo.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"

[[bin]]
name = "battle_card_game"
path = "main.rs"
